--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,12 +1,13 @@
-﻿{
-  "$schema": "http://json.schemastore.org/launchsettings.json",
+{
   "profiles": {
     "FolderSynchronization": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
+      "commandLineArgs": "SourceDirectory=\"C:\\\\Users\\\\Bruno Vicente\\\\Desktop\\\\sourceDirectory\" ReplicaDirectory=\"D:\\\\Nova pasta\" LogsFilePath=\"logs.txt\" SynchronizationInterval=\"1000\"",
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": true
     }
-  }
+  },
+  "$schema": "http://json.schemastore.org/launchsettings.json"
 }
